--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<script src="plugin/highlight/highlight.js"></script>
 
 		<script src="js/data.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/own.js"></script>
 
 	</body>
 </html>
