--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="reveal">
 	    <div id="slideid" class="slides">
 		<section id="section-0">
-		    <h2>Título</h2>
+		    <h2>Laravel</h2>
 		</section>
             </div>
 	</div>
